--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,10 +1,10 @@
 version: v1
 plugins:
   - name: go
-    out: .
+    out: gen/proto/go
     opt: paths=source_relative
   - name: go-grpc
-    out: .
+    out: gen/proto/go
     opt:
       - paths=source_relative
       - require_unimplemented_servers=false
