--- a/colors_protobufs/buf.yaml
+++ b/colors_protobufs/buf.yaml
@@ -1,4 +1,7 @@
 version: v1
+name: buf.build/andrewchen2004/colormatch-colors
+deps:
+  - buf.build/andrewchen2004/colormatch
 breaking:
   use:
     - FILE
