--- a/image_protobufs/buf.yaml
+++ b/image_protobufs/buf.yaml
@@ -1,5 +1,7 @@
 version: v1
-name: buf.build/andrewchen2004/colormatch
+name: buf.build/andrewchen2004/colormatch-images
+deps:
+  - buf.build/andrewchen2004/colormatch
 breaking:
   use:
     - FILE
