changed buf config to use an organization

--- a/protos/colors_protobufs/buf.yaml
+++ b/protos/colors_protobufs/buf.yaml
@@ -1,7 +1,7 @@
 version: v1
-name: buf.build/andrewchen2004/colormatch-colors
+name: buf.build/colormatch/colors
 deps:
-  - buf.build/andrewchen2004/colormatch
+  - buf.build/colormatch/shared
 breaking:
   use:
     - FILE
