--- a/protos/image_protobufs/buf.yaml
+++ b/protos/image_protobufs/buf.yaml
@@ -1,7 +1,7 @@
 version: v1
-name: buf.build/andrewchen2004/colormatch-images
+name: buf.build/colormatch/images
 deps:
-  - buf.build/andrewchen2004/colormatch
+  - buf.build/colormatch/shared
 breaking:
   use:
     - FILE
