--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@remotion/cli": "^3.3.18",
+    "@remotion/player": "^3.3.18",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remotion": "^3.3.18"
+  },
+  "devDependencies": {
+    "@types/react": "18.0.26"
   }
 }
