--- a/web/package.json
+++ b/web/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@remotion/cli": "^3.3.18",
     "@remotion/player": "^3.3.18",
+    "cookies-next": "^2.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "node-fetch": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remotion": "^3.3.18"
   },
   "devDependencies": {
-    "@types/react": "18.0.26"
+    "@types/react": "18.0.26",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
